--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -236,6 +236,11 @@ p {
 	margin-top: 25px;
 }
 
+#seperator {
+	color: #fff;
+	min-height: 2.5vh;
+}
+
 #about {
 	color: #fff;
 	height: 25vh;
@@ -310,14 +315,8 @@ p {
 }
 
 #experience {
-	padding: 150px 0px;
-	background-image: url(../img/highresmilkyway.jpg);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+	min-height: 100vh;
+	padding-top: 35vh;
 }
 
 #experience .service-item .icon {
@@ -364,9 +363,11 @@ p {
 
 .projects-holder {
 	padding: 30px 15px 0px 15px;
+	width: 75vw;
+	height: 50 vh;
 }
 
-.filter-categories {;
+.filter-categories {
   margin-top: 60px;
 }
 
@@ -388,18 +389,88 @@ p {
 .filter-categories ul li.active span {
   color: #f7c552;
 }
+.center-fit{
+	max-width: 100%;
+    max-height: 25vh;
+}
+#photography .inner-container.container{
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	height: 100vh;
+}
+
+#photography .row{
+	margin:0;
+	padding:0;
+}
+#photography .content-wrapper{
+	width: 100vw;
+	height: 100vh;
+	padding: 0px 0px;
+}
+
+#photography .image {
+	width: 25vw;
+	height: 25vh;
+	margin: 0px 0px;
+}
+#photography .thumb {
+	width: 25vw;
+	height: 25vh;
+	margin: 0px 0px;
+}
+#photography .col-md-4{
+	margin:0;
+	padding-left: 2vw;
+	padding-top: 25vh;
+	height: 50vh;
+	width: 20vw;
+}
+#photography .col-md-8{
+	margin:0;
+	padding-top: 12.5vh;
+	width: 75vw;
+	height:75vh;
+}
+#photography .projects-holder{
+	margin:0;
+	padding:0;
+}
+#photography{
+	height: 100vh;
+}
+#photography .photobook {
+	display: table;   /* Allow the centering to work */
+	width: 100%;
+}
+
+.photobook .photobookpics {
+	min-width: 696px;
+	list-style: none;
+	padding-top: 20px;
+}
+
+.photobook .photobookpics>li {
+	display: inline;
+}
 
 #photography .section-heading {
-	padding-top: 200px;
-	padding-bottom: 200px;
-	background-color: black;
-	height: 732px;
+	text-align: left;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	background-color: rgba(0, 0, 0, 0.5);
+	height: 582px;
 	margin-left: -100vh;
 	padding-left: 100vh;
+	overflow: hidden!important;
 }
 
 #photography .project-item {
-	margin: 0px -16px;
+	margin: 0px 0px;
+	padding: 0px 0px;
+	width: 25vh;
+	height: 25vh;
 }
 
 #photography .section-heading h4 {
@@ -475,13 +546,8 @@ p {
 }
 
 #portfolio {
-	background-image: url(../img/galaxymountaindark.jpg);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
+	min-height: 100vh;
+	padding-top: 25vh;
 }
 
 #portfolio .section-heading {
@@ -860,13 +926,12 @@ footer .connect-us ul li a:hover {
 		text-align: center;
 		padding-top: 100px;
 		padding-bottom: 100px;
-		background-color: black;
-		height: 505px;
+		background-color: rgba(0, 0, 0, 0.5);
 		margin-left: -15px;
 		padding-left: 0vh;
 		margin-right: -15px;
 		padding-right: 0vh;
-		overflow: hidden;
+		overflow: hidden!important;
 	}
 
 	#photography .section-heading .line-dec {
@@ -957,6 +1022,56 @@ footer .connect-us ul li a:hover {
 		border-top: none;
 		margin-top: 15px;
 		background-color: rgba(250, 250, 250, 0.95);
+	}
+	
+	#about .row .aboutbox p {
+		color: #000000!important;
+		text-decoration: none;
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		text-shadow: none;
+		line-height: 16px;
+		padding: 0px;
+		text-align: center;
+		letter-spacing: 0.5px;
+	}
+	
+	#about .row .aboutbox p span{
+		color: gray!important;
+		text-decoration: none;
+		font-size: 10px;
+		font-weight: 500;
+		text-transform: uppercase;
+		text-shadow: none;
+		line-height: 16px;
+		padding: 0px;
+		text-align: center;
+		letter-spacing: 0.5px;
+	}
+	
+	#about .row .aboutbox a {
+		color: #000000!important;
+		text-decoration: none;
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		text-shadow: none;
+		line-height: 16px;
+		padding: 0px;
+		letter-spacing: 0.5px;
+	}
+
+	#about .row .aboutbox a:hover {
+		color: #808080!important;
+		text-decoration: none;
+		font-size: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		text-shadow: none;
+		line-height: 16px;
+		padding: 0px;
+		letter-spacing: 0.5px;
 	}
 
 	#experience {
