--- a/css/rowpage.css
+++ b/css/rowpage.css
@@ -5,7 +5,16 @@
 }
 
 body{
-    background-color: rgb(237, 237, 237);
+    background-color: rgb(255, 255, 255);
+}
+
+h2 {
+    text-align: center;
+    font-weight: 500;
+	text-transform: uppercase;
+	text-shadow: none;
+	padding: 0px;
+	letter-spacing: 0.5px;
 }
 
 .title {
@@ -18,7 +27,12 @@ body{
 }
 
 .title h1{
-    color: rgb(237, 237, 237);
+    color: rgb(255, 255, 255);
+	font-weight: 300;
+	text-transform: uppercase;
+	text-shadow: none;
+	padding: 0px;
+	letter-spacing: 0.5px;
 }
 
 .row {
@@ -31,12 +45,19 @@ body{
     display: inline-block;
     vertical-align: top;
     background-color: white;
-    border-radius: 25px;
-    box-shadow: 7px 7px 5px grey;
-    border-style: groove;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    /* border-style: solid;
+    border-color: black;
+    border-width: 1px; */
     width: 180px;
     height: 180px;
     margin-right:30px;
+}
+
+.block:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 #block-name-link{
@@ -55,13 +76,15 @@ body{
 
 #block-name-link a{
     text-decoration: none;
-    font-size: 95%;
-    font-weight: 600;
     background-repeat: repeat-x;
     background-size: 100%;
-    color: rgb(237, 237, 237);
+    color: rgb(0, 0, 0);
+	font-weight: 400;
 	text-transform: uppercase;
-    text-shadow: -1px 0 rgb(100, 100, 100), 0 1px rgb(100, 100, 100), 1px 0 rgb(100, 100, 100), 0 -1px rgb(100, 100, 100);
+	text-shadow: none;
+	padding: 0px;
+    letter-spacing: 0.5px;
+    transition: 0.3s;
 }
 
 #block-name-link a:hover{
@@ -72,9 +95,132 @@ body{
     width: 130px;
     height: 130px;
     object-fit: cover;
-    border-radius: 20px;
-    border-style: groove;
-    border-color: rgb(237, 237, 237);
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    /* border-style: solid;
+    border-color: black;
+    border-width: 1px; */
+}
+
+.block .img:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 60%;
+    border-radius: 5px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card h4{
+    display: block;
+    margin-top: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-shadow: none;
+    padding: 0px;
+    letter-spacing: 0.5px;
+}
+
+.card a{
+    display: block;
+    margin-top: 1.33em;
+    margin-bottom: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    text-decoration: none;
+    font-weight: 400;
+    text-shadow: none;
+    padding: 0px;
+    letter-spacing: 0.4px;
+    color: #33c1cf;
+}
+
+.card p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.card h5{
+    display: block;
+    margin-bottom: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    text-transform: uppercase;
+    font-style: italic;
+    text-shadow: none;
+    font-weight: 400;
+    padding: 0px;
+    letter-spacing: 0.4px;
+    color: #808080;
+}
+
+.card h6{
+    display: block;
+    margin-top: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    text-transform: uppercase;
+    font-style: italic;
+    text-shadow: none;
+    font-weight: 400;
+    padding: 0px;
+    letter-spacing: 0.4px;
+    color: #808080;
+    font-size: 0.83em
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.center:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+}
+
+.textholder{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.textholder p{
+    text-align: center;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+    .card {
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 90%;
+        border-radius: 5px;
+    }
 }
 
 @media(max-width: 900px){
