updated projects, about me

--- a/css/rowpage.css
+++ b/css/rowpage.css
@@ -107,6 +107,16 @@ h2 {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
+.col-wrapper{
+      display: flex;
+      margin-bottom: 1.33em;
+}
+
+.column {
+    text-align: center;
+    flex: 50%;
+}
+
 .card {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -189,6 +199,7 @@ h2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 5px;
     width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -209,6 +220,17 @@ h2 {
 
 .textholder p{
     text-align: center;
+}
+
+.textholder-p{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: center;
+}
+
+.textholder-p .text{
+    width:60%;
+    display: inline-block;
 }
 
 /* Responsive columns */
